Universal Image Loader updated - our changes applied too